src/styles/override.css
@import url(ios.css);
@import url(markdown.css);

@supports (padding-top: 20px) {
	html {
		--ion-safe-area-top: var(--device-inset-top, 0px);
		--ion-safe-area-left: var(--device-inset-left, 0px);
		--ion-safe-area-right: var(--device-inset-right, 0px);
		--ion-safe-area-bottom: var(--device-inset-bottom, 0px);
	}
}

@supports (padding-top: env(safe-area-inset-top)) {
	html {
		--ion-safe-area-top: var(--device-inset-top, env(safe-area-inset-top, 0px));
		--ion-safe-area-left: var(--device-inset-left, env(safe-area-inset-left, 0px));
		--ion-safe-area-right: var(--device-inset-right, env(safe-area-inset-right, 0px));
		--ion-safe-area-bottom: var(--device-inset-bottom, env(safe-area-inset-bottom, 0px));
	}
}

html {
	--ion-font-family: 'Inter', var(--ion-default-font);
}

html.high-legibility.hl-atkinson {
	--ion-font-family: 'Atkinson Hyperlegible', var(--ion-default-font);
}

html.high-legibility.hl-opendyslexic {
	--ion-font-family: 'OpenDyslexic', var(--ion-default-font);
}

html.high-legibility.hl-lexend {
	--ion-font-family: 'Lexend', var(--ion-default-font);
}

ion-content {
	--padding-bottom: var(--ion-safe-area-bottom, 0px);
}

ion-content::part(scroll) {
	padding-left: var(--ion-safe-area-left, 0px);
	padding-right: var(--ion-safe-area-right, 0px);
}

ion-content:has(> ion-fab.fab-vertical-bottom[slot="fixed"] > ion-fab-button) {
	--padding-bottom: calc(var(--ion-safe-area-bottom, 0px) + 80px);
}

ion-fab:not(ion-tabs *) {
	margin-bottom: var(--ion-safe-area-bottom, 0px);
}

ion-modal.modal-sheet ion-header ion-toolbar:first-of-type {
	--ion-safe-area-top: 0px;
}

ion-modal.modal-sheet {
	--max-height: 90%;
	--ion-safe-area-top: inherit;
	--ion-safe-area-left: inherit;
	--ion-safe-area-right: inherit;
	--ion-safe-area-bottom: inherit;
}

.centered-text {
	text-align: center;
	padding: 1em;
}

.more-padding {
	padding-bottom: 2em;
}

p {
	text-wrap: wrap;
}

ion-label.nowrap > *:not(div) {
	text-wrap: nowrap !important;
	text-overflow: ellipsis !important;
	overflow: hidden !important;
}

.md ion-input.input-label-placement-floating,
.md ion-textarea.textarea-label-placement-floating {
	margin: 16px 0 0 0;
}

